; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_svg-device.c_svg_dev_stroke_color.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_svg-device.c_svg_dev_stroke_color.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32* }

@.str = private unnamed_addr constant [28 x i8] c" fill=\22none\22 stroke=\22#%06x\22\00", align 1
@.str.1 = private unnamed_addr constant [27 x i8] c" fill=\22none\22 stroke=\22none\22\00", align 1
@.str.2 = private unnamed_addr constant [21 x i8] c" stroke-opacity=\22%g\22\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, %struct.TYPE_3__*, i32*, float*, float, i32)* @svg_dev_stroke_color to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @svg_dev_stroke_color(i32* %0, %struct.TYPE_3__* %1, i32* %2, float* %3, float %4, i32 %5) #0 {
  %7 = alloca i32*, align 8
  %8 = alloca %struct.TYPE_3__*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca float*, align 8
  %11 = alloca float, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32*, align 8
  store i32* %0, i32** %7, align 8
  store %struct.TYPE_3__* %1, %struct.TYPE_3__** %8, align 8
  store i32* %2, i32** %9, align 8
  store float* %3, float** %10, align 8
  store float %4, float* %11, align 4
  store i32 %5, i32* %12, align 4
  %14 = load %struct.TYPE_3__*, %struct.TYPE_3__** %8, align 8
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %14, i32 0, i32 0
  %16 = load i32*, i32** %15, align 8
  store i32* %16, i32** %13, align 8
  %17 = load i32*, i32** %9, align 8
  %18 = icmp ne i32* %17, null
  br i1 %18, label %19, label %29

19:                                               ; preds = %6
  %20 = load i32*, i32** %7, align 8
  %21 = load i32*, i32** %13, align 8
  %22 = load i32*, i32** %7, align 8
  %23 = load i32*, i32** %9, align 8
  %24 = load float*, float** %10, align 8
  %25 = load i32, i32* %12, align 4
  %26 = call float @svg_hex_color(i32* %22, i32* %23, float* %24, i32 %25)
  %27 = fpext float %26 to double
  %28 = call i32 (i32*, i32*, i8*, ...) @fz_write_printf(i32* %20, i32* %21, i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0), double %27)
  br label %33

29:                                               ; preds = %6
  %30 = load i32*, i32** %7, align 8
  %31 = load i32*, i32** %13, align 8
  %32 = call i32 (i32*, i32*, i8*, ...) @fz_write_printf(i32* %30, i32* %31, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.1, i64 0, i64 0))
  br label %33

33:                                               ; preds = %29, %19
  %34 = load float, float* %11, align 4
  %35 = fcmp une float %34, 1.000000e+00
  br i1 %35, label %36, label %42

36:                                               ; preds = %33
  %37 = load i32*, i32** %7, align 8
  %38 = load i32*, i32** %13, align 8
  %39 = load float, float* %11, align 4
  %40 = fpext float %39 to double
  %41 = call i32 (i32*, i32*, i8*, ...) @fz_write_printf(i32* %37, i32* %38, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.2, i64 0, i64 0), double %40)
  br label %42

42:                                               ; preds = %36, %33
  ret void
}

declare dso_local i32 @fz_write_printf(i32*, i32*, i8*, ...) #1

declare dso_local float @svg_hex_color(i32*, i32*, float*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
